--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev -H 0.0.0.0",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
+    "build": "next build",
     "prettier": "prettier -write .",
     "lint": "next lint"
   },
